--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ flutter:
         - asset: fonts/Poppins-Bold.ttf
           weight: 700
 
+  assets:
+      - assets/images/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
